--- a/app/styles/layout/_l-header.scss
+++ b/app/styles/layout/_l-header.scss
@@ -3,7 +3,7 @@
 	padding:0px;
 	width: 100%;
 	height:75vh;
-	background-image: linear-gradient(black, transparent 90%),
+	background-image: linear-gradient(black, transparent 80%),
 				      url("/images/me2.png");			
 	background-position: 0% 100%;
 	background-repeat: no-repeat;
