--- a/app/styles/modules/_m-foot.scss
+++ b/app/styles/modules/_m-foot.scss
@@ -1,5 +1,5 @@
 .social-icons{
-	padding-top: 70px;
+	padding-top: 60px;
 	width:100%;
 	height:200px;
 	text-align: center;
@@ -9,7 +9,7 @@
 		padding-top: 0px;
 		padding-right: 10px;
 		padding-left: 10px;
-		//media query for BEM Element 
+		//media query for BEM Element
 		// reponsive layout for tablets and up
 		@media only screen and (min-width: 850px) {
 			padding-top: 40px;
@@ -20,10 +20,7 @@
 	// BEM Element
 	&__tooltip{
 		display: none;
-		position: absolute;
-		float: left;
-		top: -5px;
-		left:35px;
+		position: relative;
 		padding-top: 5px;
 		padding-bottom: 5px;
 		width:100px;
@@ -33,34 +30,34 @@
 		background: white;
 		visibility: hidden;
 		transition: all .2s linear;
-		visibility: hidden;
-		//media query for BEM Element 
+		//media query for BEM Element
 		// reponsive layout for tablets and up
 		@media only screen and (min-width: 850px) {
 			display: block;
-			left:35px;
+			top: -2px;
+			left:16px;
 			padding-top: 5px;
 			padding-bottom: 5px;
 			width:100px;
+			visibility: hidden;
 		}
-
 		// tooltip bottom triangle
 		&:after{
 			content:"";
 			position: absolute;
 			top: 10px;
 			left: 33px;
-		 	border-top: 15px solid $pg-divider;
-		 	border-left: 15px solid transparent;
-		  	border-right: 15px solid transparent;
-		  	// reponsive layout for tablets and up
-	  		@media only screen and (min-width: 850px) {
-	  			top: 30px;
+			border-top: 15px solid $pg-divider;
+			border-left: 15px solid transparent;
+		  border-right: 15px solid transparent;
+		  // reponsive layout for tablets and up
+	  	@media only screen and (min-width: 850px) {
+	  		top: 30px;
 				left: 33px;
-		 		border-top: 15px solid $pg-divider;
-		 		border-left: 15px solid transparent;
-		  		border-right: 15px solid transparent;
-	  		}
+			 	border-top: 15px solid $pg-divider;
+			 	border-left: 15px solid transparent;
+		  	border-right: 15px solid transparent;
+	  	}
 		}
 	}
 }
